- Updated and renamed acontextwindow.h to AlmondShell/acontextwindow.h.
- Updated and renamed acoroutine.h to AlmondShell/acoroutine.h.
- Updated and renamed aengine.cpp to AlmondShell/aengine.cpp.
- Updated and renamed aengine.h to AlmondShell/aengine.h.
- Applied a generic fix pass across the project.
- Added additional uploaded assets for AlmondShell.
- Updated and renamed runcommands.bat to x64/Release/runcommands.bat.
- Added multi-context textures and atlases scaffolding.
- Implemented the multi-context texture upload service.
- Updated menu assets.
- Fixed menu sprite UVs and handled OpenGL context loss.
- Fixed the atlas manager namespace comment.
- Applied a hotfix after the previous merge.
- Wired multiplexer windows to centralized contexts.
- Reverted wiring multiplexer windows to centralized contexts after regressions.
- Fixed context cloning for the multiplexer.
- Turned off extra contexts to focus on the OpenGL path.
- Fixed OpenGL sprite V orientation.
- Reverted the OpenGL sprite V orientation fix temporarily.
- Reapplied the OpenGL sprite V orientation fix.
- Applied a small rendering patch and updated textures.
- Ensured atlas entry access is thread-safe.
- Restored missing images.
- Updated the README description.
- Documented vcpkg manifest dependencies in the README.
- Updated the README with additional clarifications.
- Updated the README again with further adjustments.
- Updated the README to refine wording and structure.
- Improved README formatting and included a file tree.
- Documented Visual Studio vcpkg integration steps.
- Documented engine configuration switches.
- Emphasized architectural pillars within the README.
- Updated the README after earlier documentation passes.
- Refined multi-context runtime management.
- Reverted the multi-context runtime management refinement after issues.
- Refined the context multiplexer threading spine.
- Applied miscellaneous adjustments and cleanup.
- Fixed the menu button grid layout.
