@@ -31,7 +31,8 @@ Phase 2 – Core Runtime Stabilisation
 - [ ] Implement regression tests for each renderer backend (OpenGL, Raylib, SDL software) using headless validation scenes.
 - [x] Harden multi-context window management with assertions, telemetry counters, and leak detection hooks in `acontextmultiplexer`. *(v0.57.16 prevents the main thread from re-entering active render threads, removing a long-standing race in `ProcessAllContexts`; v0.59.0 gates the Win32-only multiplexer implementation and provides cross-platform stubs so Linux/macOS builds stop failing.)*
 - [x] Route both the automatic `RunEngine()` entry point and `wWinMain` through the same multi-context loop so every startup path spins up the full renderer/task orchestration stack.
-- [x] Fix Raylib resize propagation so OS-driven window changes update context dimensions and client callbacks without recursion. *(v0.59.1 coalesces Raylib resize notifications and forwards them through guarded callbacks.)*
+- [x] Fix Raylib resize propagation so OS-driven window changes update context dimensions and client callbacks without recursion. *(v0.59.1 coalesces Raylib resize notifications and forwards them through guarded callbacks; v0.59.2 mirrors the other backends by updating `WindowData` and forcing the docked child window to respect parent bounds.)*
+- [x] Prevent SDL docking from hijacking the host parent window while keeping layouts aligned. *(v0.59.2 drops the Win32 `SetParent` call and repositions SDL windows to the parent client rectangle instead.)*
 - [ ] Finalise task scheduler/coroutine orchestration; stress-test script reload storms and fix deadlocks.
 - [x] Optimise hot-reload pipeline to recompile scripts incrementally with clear diagnostics (see `src/ascriptingsystem.cpp`). *(v0.58.0 introduces `ScriptLoadReport`, synchronous reload waits, and task pruning to surface failures deterministically.)*
 - [ ] Integrate automated smoke coverage for the script reload flow using the new diagnostics surface.
